syntax = "proto3";

package storage;

message Frame {
  uint64 page_no = 1;
  bytes data = 2;
}

message InsertFramesReq {
  repeated Frame frames = 1;
}

message InsertFramesResp {
  int32 num_frames = 1;
}

message FindFrameReq {
  uint64 page_no = 1;
}

message FindFrameResp {
  optional uint64 frame_no = 1;
}

message ReadFrameReq {
  uint64 frame_no = 1;
}

message ReadFrameResp {
  optional bytes frame = 1;
}

message DbSizeReq {

}

message DbSizeResp {
  uint64 size = 1;
}

service Storage {
  rpc InsertFrames(InsertFramesReq) returns (InsertFramesResp) {}
  rpc FindFrame(FindFrameReq) returns (FindFrameResp) {}
  rpc ReadFrame(ReadFrameReq) returns (ReadFrameResp) {}
  rpc DbSize(DbSizeReq) returns (DbSizeResp) {}
}
